[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPrincipal" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnComecar" type="Button" parent="UI/MenuPrincipal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 100 )
text = "Come√ßar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuConfiguracoes" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Carregamento" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerCarregamento" type="Timer" parent="UI/Carregamento"]

[node name="ProgressBarCarregamento" type="ProgressBar" parent="UI/Carregamento"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/MenuPrincipal/btnComecar" to="." method="_on_btnComecar_pressed"]
[connection signal="timeout" from="UI/Carregamento/TimerCarregamento" to="." method="_on_TimerCarregamento_timeout"]
